# eudaq_rino

./: CitirocCfg_1.txt
user/: CMakeLists.txt
user/fers/: CMakeLists.txt  README.md
user/fers/hardware/: CMakeLists.txt
user/fers/hardware/include/: FERS_LLusb.h  FERS_Registers.h  FERSlib.h  JanusC.h  MultiPlatform.h  Statistics.h  console.h
user/fers/hardware/src/: FERS_LLeth.cc  FERS_LLtdl.cc  FERS_LLusb.cpp  FERS_readout.cc  FERSlib.cc  FERSutils.cc  Statistics.cc  configure.cc  console.cc  paramparser.cc
user/fers/misc/: FERSMonitor.cc  FERSProducer.cc  FERS_EUDAQ.cc  FERS_EUDAQ.h  fers.conf  fers.ini  fers_janus_orig.conf  run.sh
user/fers/misc/conf/: Janus_Config_0.txt  Janus_Config_1.txt  Janus_Config_Original.txt  XXXJanus_Config_Original.txt  conf_0.txt
user/fers/module/: CMakeLists.txt
user/fers/module/src/: FERSDataCollector.cc  FERSMonitor.cc  FERSProducer.cc  FERS_EUDAQ.cc  FERS_EUDAQ.h  FERSlib.cc  FERSpackunpack.cc  FERSpackunpack.h  fers_janus.conf
